SET(trinitydatabase_STAT_SRCS
   AsyncDatabaseImpl.h
   DBCStores.cpp
   DBCStores.h
   DBCStructure.h
   DBCfmt.cpp
   Database.cpp
   Database.h
   DatabaseEnv.h
   DatabaseMysql.cpp
   DatabasePostgre.cpp
   DatabaseMysql.h
   DatabasePostgre.h
   DatabaseSqlite.cpp
   DatabaseSqlite.h
   DatabaseWorker.cpp
   DatabaseWorker.h
   DatabaseWorkerPool.cpp
   DatabaseWorkerPool.h
   MySQLConnection.cpp
   MySQLConnection.h
   MySQLThreading.h
   Field.cpp
   Field.h
   MySQLDelayThread.h
   PGSQLDelayThread.h
   QueryResult.h
   QueryResultMysql.cpp
   QueryResultMysql.h
   QueryResultPostgre.cpp
   QueryResultPostgre.h
   QueryResultSqlite.cpp
   QueryResultSqlite.h
   ../Threading/Threading.cpp
   ../Threading/Threading.h
   SQLStorage.cpp
   SQLStorage.h
   #SqlDelayThread.cpp
   #SqlDelayThread.h
   #SqlOperations.cpp
   #SqlOperations.h
   SQLOperation.cpp
   SQLOperation.h
   Transaction.cpp
   Transaction.h
   dbcfile.cpp
   dbcfile.h
)

add_library(trinitydatabase STATIC ${trinitydatabase_STAT_SRCS})
